# project_rust

./: Cargo.toml  products.csv
src/: main.rs
